# kanin

./: .gitignore  CODEOWNERS  Cargo.toml  LICENSE-MIT  README.md  deny.toml  docker-compose.yml  justfile
.github/workflows/: audit.yml  check-licenses.yaml  ci.yml  format.yml  lint.yml  test.yml
kanin/: .gitignore  Cargo.toml
kanin/src/: app.rs  derive.rs  error.rs  extract.rs  handler.rs  handler_config.rs  lib.rs  queue_config.rs  request.rs  response.rs
kanin/src/app/: task.rs
kanin/src/extract/: acker.rs  app_id.rs  message.rs  req_id.rs  state.rs
kanin/src/tests/: basic.rs  send_recv.rs
kanin/tests/: protobuf.rs
kanin_derive/: Cargo.toml  README.md
kanin_derive/src/: from_error.rs  lib.rs  state.rs
minimal_example/: Cargo.toml  build.rs
minimal_example/src/: main.rs  protobuf.rs
minimal_example/src/protobuf/: echo.proto  generated.rs
