[package]
name = "kanin"
version = "0.22.2"
edition = "2021"
authors = ["Victor Nordam Suadicani <v.n.suadicani@gmail.com>"]
description = "An RPC microservice framework for AMQP, protobuf and Rust built on lapin (https://github.com/amqp-rs/lapin)."
rust-version = "1.64"
repository = "https://github.com/issuu/kanin"
license = "MIT OR Apache-2.0"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Derive macros for traits in kanin.
kanin_derive = "0.5.0"

# Lower level AMQP framework.
lapin = "2.1.0"

# Generalized logging framework.
log = "0.4"

# Asynchronous runtime.
tokio = { version = "1.18.0", features = ["rt", "rt-multi-thread", "macros"] }

# Future utilities.
futures = "0.3.21"

# Temporary solution to async traits until they are supported by the standard library.
async-trait = "0.1.53"

# Protobuf implementation.
prost = "0.11.0"

# Useful extra derive macros.
derive_more = "0.99.17"

# Useful derive macro for std::error::Error.
# Great for structured errors.
thiserror = "1.0.30"

# Provides a map from types to a single value of that type.
anymap = "1.0.0-beta.1"

[dev-dependencies]
# Concrete logging implementation.
env_logger = "0.10.0"

# Asynchronous runtime.
tokio = { version = "1.18.0", features = [
	"rt",
	"rt-multi-thread",
	"macros",
	# Needed for sleeping on tasks.
	"time",
	# Needed for OnceCell.
	"sync",
	# Needed for const_new on OnceCell.
	"parking_lot",
] }
