[package]
name = "kanin"
version = "0.32.1"
edition = "2021"
authors = ["Victor Nordam Suadicani <v.n.suadicani@gmail.com>"]
description = "An RPC microservice framework for AMQP, protobuf and Rust built on lapin (https://github.com/amqp-rs/lapin)."
rust-version = "1.64"
repository = "https://github.com/issuu/kanin"
license = "MIT OR Apache-2.0"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Derive macros for traits in kanin.
kanin_derive = "0.7.0"

# Lower level AMQP framework.
lapin = "2.3.1"

# Generalized tracing framework.
tracing = "0.1.37"

# Used to create unique request IDs.
uuid = { version = "1.4.1", features = ["v4"] }

# Asynchronous runtime.
tokio = { version = "1.18.0", features = [
	"rt",
	"rt-multi-thread",
	"macros",
	"signal",
	"sync",
] }

# Future utilities.
futures = "0.3.21"

# Temporary solution to async traits until they are supported by the standard library.
async-trait = "0.1.53"

# Protobuf implementation.
prost = "0.12.0"

# Useful extra derive macros.
derive_more = "0.99.17"

# Useful derive macro for std::error::Error.
# Great for structured errors.
thiserror = "1.0.30"

# For exposing metrics about the internal state of kanin.
metrics = "0.22.1"

[dev-dependencies]
# Concrete logging implementation.
tracing-subscriber = "0.3.18"

# Asynchronous runtime.
tokio = { version = "1.18.0", features = [
	"rt",
	"rt-multi-thread",
	"macros",
	"parking_lot",
	"signal",
	"sync",
	"time",
] }
